--- a/src/uni_modules/uview-ui/theme.scss
+++ b/src/uni_modules/uview-ui/theme.scss
@@ -1,35 +1,46 @@
 // 此文件为uView的主题变量，这些变量目前只能通过uni.scss引入才有效，另外由于
 // uni.scss中引入的样式会同时混入到全局样式文件和单独每一个页面的样式中，造成微信程序包太大，
 // 故uni.scss只建议放scss变量名相关样式，其他的样式可以通过main.js或者App.vue引入
-
+/*主要文字*/
 $u-main-color: #303133;
+/*常规文字*/
 $u-content-color: #606266;
+/*次要文字*/
 $u-tips-color: #909193;
+/*占位文字*/
 $u-light-color: #c0c4cc;
+/*边框的颜色*/
 $u-border-color: #dadbde;
+/*背景的颜色*/
 $u-bg-color: #f3f4f6;
+/*禁用的颜色*/
 $u-disabled-color: #c8c9cc;
 
+/*主色*/
 $u-primary: #3c9cff;
 $u-primary-dark: #398ade;
 $u-primary-disabled: #9acafc;
 $u-primary-light: #ecf5ff;
 
+/*警示*/
 $u-warning: #f9ae3d;
 $u-warning-dark: #f1a532;
 $u-warning-disabled: #f9d39b;
 $u-warning-light: #fdf6ec;
 
+/*成功*/
 $u-success: #5ac725;
 $u-success-dark: #53c21d;
 $u-success-disabled: #a9e08f;
 $u-success-light: #f5fff0;
 
+/*错误*/
 $u-error: #f56c6c;
 $u-error-dark: #e45656;
 $u-error-disabled: #f7b2b2;
 $u-error-light: #fef0f0;
 
+/*提示*/
 $u-info: #909399;
 $u-info-dark: #767a82;
 $u-info-disabled: #c4c6c9;
@@ -37,8 +48,8 @@ $u-info-light: #f4f4f5;
 
 // scss混入，为了少写几行#ifndef
 @mixin flex($direction: row) {
-	/* #ifndef APP-NVUE */
-	display: flex;
-	/* #endif */
-	flex-direction: $direction;
+  /* #ifndef APP-NVUE */
+  display: flex;
+  /* #endif */
+  flex-direction: $direction;
 }
